[package]
name = "cdb"
version = "0.5.0"
authors = ["Bruce Guenter <bruce@untroubled.org>"]
description = "Pure Rust library to read and write CDB files"
documentation = "https://bruceg.github.io/cdb-rs/cdb/"
homepage = "https://github.com/bruceg/cdb-rs"
repository = "https://github.com/bruceg/cdb-rs"
readme = "README.md"
license = "Unlicense"
exclude = [
	"gh-pages/*",
]

[dependencies]
libc = "0.2.4"
mmap = "0.1.1"
